<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.apiman</groupId>
  <artifactId>apiman-servers</artifactId>
  <version>1.4.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>apiman-servers</name>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:apiman/apiman-servers.git</connection>
    <developerConnection>scm:git:git@github.com:apiman/apiman-servers.git</developerConnection>
    <url>scm:git:git@github.com:apiman/apiman-servers.git</url>
  </scm>

  <developers>
    <developer>
      <name>Marc Savy</name>
      <id>msavy</id>
      <email>marc.savy@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Tech Lead</role>
        <role>Developer</role>
      </roles>
      <timezone>0</timezone>
    </developer>
    <developer>
      <name>Eric Wittmann</name>
      <id>EricWittmann</id>
      <email>eric.wittmann@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Tech Lead</role>
        <role>Developer</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>

    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>

    <version.apiman>1.4.0-SNAPSHOT</version.apiman>

    <!-- Plugin Versions -->
    <version.antrun.plugin>1.7</version.antrun.plugin>
    <version.assembly.plugin>2.5</version.assembly.plugin>
    <version.buildhelper.plugin>1.9.1</version.buildhelper.plugin>
    <version.buildnumber.plugin>1.3</version.buildnumber.plugin>
    <version.bundle.plugin>2.5.3</version.bundle.plugin>
    <version.clean.plugin>2.6</version.clean.plugin>
    <version.com.qmino.miredot-plugin>1.5.1</version.com.qmino.miredot-plugin>
    <version.compiler.plugin>3.2</version.compiler.plugin>
    <version.dependency.plugin>2.9</version.dependency.plugin>
    <version.deploy.plugin>2.8.2</version.deploy.plugin>
    <version.install.plugin>2.5.2</version.install.plugin>
    <version.jar.plugin>2.5</version.jar.plugin>
    <version.javadoc.plugin>2.10.1</version.javadoc.plugin>
    <version.resources.plugin>2.7</version.resources.plugin>
    <version.source.plugin>2.4</version.source.plugin>
    <version.surefire.plugin>2.17</version.surefire.plugin>
    <version.surefire-report.plugin>2.17</version.surefire-report.plugin>
    <version.failsafe.plugin>2.14</version.failsafe.plugin>
    <version.war.plugin>2.5</version.war.plugin>
    <version.exec.plugin>1.3.2</version.exec.plugin>
    <version.vertx.plugin>2.0.11-final</version.vertx.plugin>
    <version.docker.plugin>0.11.2</version.docker.plugin>
    <version.frontend-maven.plugin>0.0.23</version.frontend-maven.plugin>

    <!-- Dependency Versions -->
    <version.org.jboss.logging.jboss-logging>3.3.0.Final</version.org.jboss.logging.jboss-logging>
    <version.org.apache.logging.log4j>2.8.2</version.org.apache.logging.log4j>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Project Deps -->
      <dependency>
        <groupId>io.apiman</groupId>
        <artifactId>apiman-manager-api-micro</artifactId>
        <version>${version.apiman}</version>
      </dependency>
      <dependency>
        <groupId>io.apiman</groupId>
        <artifactId>apiman-gateway-platforms-war-micro</artifactId>
        <version>${version.apiman}</version>
      </dependency>
      <dependency>
        <groupId>io.apiman</groupId>
        <artifactId>apiman-common-util</artifactId>
        <version>${version.apiman}</version>
      </dependency>
      <dependency>
        <groupId>io.apiman</groupId>
        <artifactId>apiman-distro-data</artifactId>
        <version>${version.apiman}</version>
      </dependency>
      <dependency>
	<groupId>io.apiman</groupId>
	<artifactId>apiman-gateway-engine-vertx-polling</artifactId>
	<version>${version.apiman}</version>
      </dependency>

      <!-- Third Party Deps -->
      <dependency>
        <groupId>org.jboss.logging</groupId>
        <artifactId>jboss-logging</artifactId>
        <version>${version.org.jboss.logging.jboss-logging}</version>
      </dependency>
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>5.1.36</version>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>1.3.173</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.1.1</version>
      </dependency>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>2.4.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${version.org.apache.logging.log4j}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${version.org.apache.logging.log4j}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>${version.antrun.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${version.assembly.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${version.buildhelper.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>buildnumber-maven-plugin</artifactId>
          <version>${version.buildnumber.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>${version.bundle.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${version.clean.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.compiler.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${version.dependency.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${version.deploy.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>${version.install.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${version.jar.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${version.javadoc.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${version.resources.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${version.source.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${version.war.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${version.exec.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.jolokia</groupId>
          <artifactId>docker-maven-plugin</artifactId>
          <version>${version.docker.plugin}</version>
        </plugin>
        <plugin>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-maven-plugin</artifactId>
          <version>${version.vertx.plugin}</version>
          <dependencies>
            <dependency>
              <groupId>io.vertx</groupId>
              <artifactId>vertx-core</artifactId>
              <version>${version.io.vertx}</version>
            </dependency>
            <dependency>
              <groupId>io.vertx</groupId>
              <artifactId>vertx-platform</artifactId>
              <version>${version.io.vertx}</version>
            </dependency>
            <dependency>
              <groupId>io.vertx</groupId>
              <artifactId>vertx-hazelcast</artifactId>
              <version>${version.io.vertx}</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire.plugin}</version>
          <configuration>
            <systemProperties>
              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
            </systemProperties>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${version.surefire-report.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.failsafe.plugin}</version>
        </plugin>
        <plugin>
          <groupId>com.qmino</groupId>
          <artifactId>miredot-plugin</artifactId>
          <version>${version.com.qmino.miredot-plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- Include the maven-compiler-plugin settings here so that Eclipse/m2e will properly import the projects. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
          </includes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <argLine>-Xmx368m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}</directory>
              <includes>
                <include>www-test/**</include>
                <include>src/main/webapp/app/**</include>
                <include>src/main/webapp/WEB-INF/deploy/**</include>
                <include>src/main/webapp/WEB-INF/lib/**</include>
                <include>src/main/webapp/WEB-INF/classes/**</include>
                <include>**/*.JUnit/**</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
        <version>${version.frontend-maven.plugin}</version>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <modules>
    <module>gateway-file</module>
    <module>gateway-es</module>
    <module>gateway-h2</module>
    <module>manager-h2</module>
    <module>manager-es</module>
    <module>manager-mysql</module>
    <module>manager-oracle</module>
    <module>manager-postgres</module>
  </modules>
</project>
